# familiar-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ME-template.md  README-de.md  README-fr.md  README-ja.md  README-zh-TW.md  README-zh.md  README.md  pyproject.toml  run.sh
.beads/: issues.jsonl
.github/workflows/: lint.yml  translate.yml
dev/: README.md
dev/familiar-add-tool/: SKILL.md
dev/familiar-check-env/: SKILL.md
dev/familiar-debug-loop/: SKILL.md
docs/: feature-ja.md  technical.md
persona-template/: de.md  en.md  fr.md  ja.md  zh.md
scripts/: translate_readme.py
src/familiar_agent/: __init__.py  _i18n.py  agent.py  backend.py  config.py  desires.py  main.py  mcp_client.py  reflect.py  tape.py  tui.py
src/familiar_agent/tools/: __init__.py  camera.py  coding.py  file_tool.py  memory.py  mobility.py  stt.py  tom.py  tts.py  web_tool.py
tests/: test_agent_file_e2e.py  test_agent_web_e2e.py  test_desires.py  test_mcp_client.py  test_stt.py  test_tape.py  test_tui_autocomplete.py
tests/tools/: test_file_tool.py  test_web_tool.py
