[project]
name = "familiar-agent"
version = "0.1.0"
description = "A versatile AI agent for diverse tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "loguru>=0.7.0",
    "pillow>=10.0.0",
    "openai-whisper",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "google-genai>=1.0.0",
    "textual>=8.0.0",
    # Custom tools dependencies (Pending)
    # "beautifulsoup4>=4.14.3",
    # "duckduckgo-search>=8.0.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]

[project.scripts]
familiar-agent = "familiar_agent.main:main"

[tool.uv]
managed = true
package = true

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.10.0",
]
